# chrisomatic

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  LICENSE  README.md  _demo.py  chrisomatic.yml  chrisup.yml  dev.Dockerfile  docker-compose.yml  justfile  pyproject.toml  run.py  setup.py
.github/workflows/: build.yml  test.yml
chris/: __init__.py
chris/common/: __init__.py  _search.py  atypes.py  client.py  decorator.py  deserialization.py  errors.py  models.py  search.py  types.py
chris/cube/: client.py  deserialization.py  models.py  types.py
chris/store/: client.py  deserialization.py  models.py  types.py
chris/tests/: conftest.py  test_chrisstore.py  test_cube.py  test_everything.py  test_helper.py
chris/tests/examples/: plugin_description.py
chrisomatic/: __init__.py  outcome.py  task.py  taskset.py
chrisomatic/action/: client.py  docker.py
chrisomatic/cli/: __init__.py  __main__.py  actions.py  agenda.py  apply.py  noop.py  typer.py
chrisomatic/core/: _pldesc.py  computeenvs.py  connect_peers.py  create.py  create_god.py  create_omniclient.py  create_superuser.py  create_users.py  docker.py  expand.py  helpers.py  omniclient.py  plugins.py  superclient.py  superuser.py  waitup.py
chrisomatic/core/client/: create.py
chrisomatic/framework/: __init__.py  outcome.py  runner.py  task.py  taskrunner.py  taskset.py
chrisomatic/helpers/: pldesc.py  waitup.py
chrisomatic/spec/: __init__.py  common.py  deserialize.py  given.py  schema.py
docs/: CHANGELOG.adoc  SPEC.adoc  interpretation.adoc  schema.adoc  scratch.py  spec.adoc
docs/examples/: chrisomatic.yml  default.yml
scripts/: simulation.sh
src/chrisomatic/: __init__.py  __version__.py
src/chrisomatic/cli/: agenda.py  final_result.py
src/chrisomatic/core/: computeenvs.py  create_superuser.py  create_users.py  expand.py  plugins.py
src/chrisomatic/framework/: outcome.py  runner.py
src/chrisomatic/helpers/: pldesc.py  retry.py  superuser.py
src/chrisomatic/spec/: common.py  deserialize.py  given.py  schema.py
testing_harness/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
testing_harness/scripts/: create_example.py  pytest  simulation.sh  try
tests/: conftest.py
tests/chris/: test_everything.py  test_helper.py
tests/chrisomatic/: test_deserialization.py  test_docker_interaction.py  test_helper.py
