[tool.poetry]
name = "chrisomatic"
version = "0.5.0.a2"
description = "ChRIS backend provisioner with Powerpointlessness"
authors = ["Jennings Zhang <Jennings.Zhang@childrens.harvard.edu>"]
license = "MIT"

packages = [
    { include = "chris" },
    { include = "chrisomatic" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
aiohttp = "^3.8.4"
rich = "^13.3.3"

# https://github.com/yukinarit/pyserde/issues/292
pyserde = "0.10.4"

aiodocker = "^0.21.0"
strictyaml = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
prospector = "^1.9.0"
mypy = "^1.1.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chrisomatic = "chrisomatic.cli.typer:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
