[project]
name = "chrisomatic"
version = "0.9.0"
description = "ChRIS backend provisioner"
authors = [
    { name = "Jennings Zhang", email = "Jennings.Zhang@childrens.harvard.edu" }
]
dependencies = [
    "typer>=0.12.3",
    "aiohttp>=3.9.5",
    "rich>=13.7.1",
    "pyserde>=0.19.3",
    "aiodocker>=0.22.2",
    "strictyaml>=1.7.3",
    "aiochris>=0.8.0",
]
readme = "README.md"
requires-python = "== 3.12.3"

[project.scripts]
chrisomatic = "chrisomatic.cli.typer:app"

[tool.rye.scripts]
test = "docker compose run --rm --build dev"
simulate = "docker compose run --rm --build dev /app/scripts/simulation.sh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chrisomatic"]
